<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filter_option"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Sort_by_price"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbascprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asc"
                    android:textSize="@dimen/_15sdp">

                </RadioButton>

                <RadioButton
                    android:id="@+id/rdbdescprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textSize="@dimen/_15sdp">

                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close" />

            <Button
                android:id="@+id/btnfind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/Find" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>