<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_14sdp"
                        android:singleLine="true"
                        android:text="@string/assets_name"
                        android:textSize="@dimen/_10sdp"
                        tools:ignore="RtlHardcoded" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_14sdp"
                        android:singleLine="true"
                        android:text="@string/price_usd"
                        android:textSize="@dimen/_10sdp"
                        tools:ignore="HardcodedText,RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_14sdp"
                        android:singleLine="true"
                        android:text="@string/time"
                        android:textSize="@dimen/_10sdp"
                        tools:ignore="HardcodedText,RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded" />


                    <TextView
                        android:id="@+id/txtprice_usd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText,RtlHardcoded" />

                    <TextView
                        android:id="@+id/txtstartdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text=""
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText,RtlHardcoded" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>